--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -72,9 +72,12 @@
                                         <table class="table table-striped">
                                             <thead>
                                             <tr>
-                                                <th>id</th>
-                                                <th>email</th>
-                                                <th>role</th>
+                                                <th>ID</th>
+                                                <th>First Name</th>
+                                                <th>Last Name</th>
+                                                <th>Age</th>
+                                                <th>Email</th>
+                                                <th>Role</th>
                                                 <th>edit</th>
                                                 <th>delete</th>
                                             </tr>
@@ -100,22 +103,35 @@
                                             <form id="add-user-form">
 
                                                 <div class="form-outline mb-4">
-                                                    <strong><label class="form-label" for="emailNewUser">Email
-                                                        address</label></strong>
-                                                    <input type="email" id="emailNewUser" name="email"
-                                                           class="form-control">
+                                                    <strong><label class="form-label">First Name</label></strong>
+                                                    <input type="text" name="firstname" class="form-control">
                                                 </div>
 
                                                 <div class="form-outline mb-4">
-                                                    <strong><label class="form-label" for="passwordNewUser">Password</label></strong>
-                                                    <input type="password" id="passwordNewUser" name="password" class="form-control">
+                                                    <strong><label class="form-label">Last Name</label></strong>
+                                                    <input type="text" name="lastname" class="form-control">
+                                                </div>
+
+                                                <div class="form-outline mb-4">
+                                                    <strong><label class="form-label">Age</label></strong>
+                                                    <input type="number" name="age" class="form-control">
+                                                </div>
+
+                                                <div class="form-outline mb-4">
+                                                    <strong><label class="form-label">Email address</label></strong>
+                                                    <input type="email" name="email" class="form-control">
+                                                </div>
+
+                                                <div class="form-outline mb-4">
+                                                    <strong><label class="form-label">Password</label></strong>
+                                                    <input type="password" name="password" class="form-control">
                                                 </div>
 
                                                 <div class="form-outline mb-4">
                                                     <strong> <label class="form-label">Role</label></strong>
                                                     </br>
                                                     <select class="custom-select" size="2"
-                                                            id="rolesNewUser" name="rolesAdd" multiple>
+                                                            name="rolesAdd" multiple>
                                                         <option value="ROLE_ADMIN">ADMIN</option>
                                                         <option value="ROLE_USER" selected="selected">USER</option>
                                                     </select>
@@ -149,9 +165,12 @@
                                         <table class="table table-striped">
                                             <thead>
                                             <tr>
-                                                <th>id</th>
-                                                <th>email</th>
-                                                <th>role</th>
+                                                <th>ID</th>
+                                                <th>First Name</th>
+                                                <th>Last Name</th>
+                                                <th>Age</th>
+                                                <th>Email</th>
+                                                <th>Role</th>
                                             </tr>
                                             </thead>
 
@@ -195,7 +214,10 @@
 </div>
 
 <script src="code.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script
+        src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
