--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -49,9 +49,12 @@
                                 <table class="table table-striped">
                                     <thead>
                                     <tr>
-                                        <th>id</th>
-                                        <th>email</th>
-                                        <th>role</th>
+                                        <th>ID</th>
+                                        <th>First Name</th>
+                                        <th>Last Name</th>
+                                        <th>Age</th>
+                                        <th>Email</th>
+                                        <th>Role</th>
                                     </tr>
                                     </thead>
                                     <tbody id="tbody-user"></tbody>
