--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -26,14 +26,11 @@
                     </ul>
                 </div>
             </nav>
-            </br>
-
-
             <div class="row">
 
                 <div class="col-md-2">
                     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-
+                        <br>
                         <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-adminPage"
                            role="tab" aria-controls="v-pills-home" aria-selected="true">Admin</a>
 
@@ -42,15 +39,13 @@
                     </div>
                 </div>
 
-                <div class="col-md-10">
+                <div class="col-md-10 bg-light">
 
                     <div class="tab-content" id="v-pills-tabContent">
 
-
                         <div class="tab-pane active" id="v-pills-adminPage" role="tabpanel" aria-labelledby="home-tab">
-                            <h3>
-                                Admin panel
-                            </h3>
+                            <div class="h1">Admin Panel</div>
+
                             <ul class="nav nav-tabs" id="myTab" role="tablist">
                                 <li class="nav-item">
                                     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#userTable"
@@ -65,10 +60,9 @@
 
                                 <div class="tab-pane fade show active" id="userTable" role="tabpanel"
                                      aria-labelledby="home-tab">
-                                    <div class="col-sm-12">
-                                        <h4>
-                                            All users
-                                        </h4>
+                                    <div class="card">
+                                        <h5 class="card-header">All users</h5>
+                                        <div class="card-body">
                                         <table class="table table-striped">
                                             <thead>
                                             <tr>
@@ -87,18 +81,16 @@
 
                                         </table>
                                         </br>
-                                        </br>
+                                        </div>
                                     </div>
                                 </div>
 
                                 <!--                        new user -->
                                 <div class="tab-pane fade" id="addUser" role="tabpanel" aria-labelledby="profile-tab">
-                                    <div class="col-sm-12">
-                                        <h4>
-                                            Add new user
-                                        </h4>
+                                    <div class="card">
+                                        <h5 class="card-header">Add new user</h5>
                                     </div>
-                                    <div align="center">
+                                    <div class="card-body" align="center">
                                         <div class="col-sm-3 aria-controls">
                                             <form id="add-user-form">
 
@@ -126,7 +118,6 @@
                                                     <strong><label class="form-label">Password</label></strong>
                                                     <input type="password" name="password" class="form-control">
                                                 </div>
-
                                                 <div class="form-outline mb-4">
                                                     <strong> <label class="form-label">Role</label></strong>
                                                     </br>
@@ -149,19 +140,16 @@
                         </div>
 
                         <div class="tab-pane" id="v-pills-userInfo" role="tabpanel" aria-labelledby="profile-tab">
-                            <h3>
-                                User information-page
-                            </h3>
+                            <div class="h1">User information-page</div>
                             <br>
                             <br>
                             <div class="tab-content modal-content" id="myTabContentUser">
 
                                 <div class="tab-pane fade show active" id="userTableUser" role="tabpanel"
                                      aria-labelledby="home-tab">
-                                    <div class="col-sm-12">
-                                        <h4>
-                                            About user
-                                        </h4>
+                                    <div class="card">
+                                        <h5 class="card-header">About user</h5>
+                                        <div class="card-body">
                                         <table class="table table-striped">
                                             <thead>
                                             <tr>
@@ -178,7 +166,7 @@
 
                                         </table>
                                         </br>
-                                        </br>
+                                    </div>
                                     </div>
                                 </div>
                             </div>
