--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -24,28 +24,26 @@
                     </ul>
                 </div>
             </nav>
-            </br>
             <div class="row">
+                <br>
                 <div class="col-md-2">
                     <ul class="nav nav-pills flex-column">
+                        <br>
                         <li class="nav-item">
                             <a class="nav-link active" href="/user">User</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-md-10">
-                    <h3>
-                        User information-page
-                    </h3>
+                    <div class="h1">User information-page</div>
                     <br>
                     <div class="tab-content modal-content" id="myTabContent">
 
                         <div class="tab-pane fade show active" id="userTable" role="tabpanel"
                              aria-labelledby="home-tab">
-                            <div class="col-sm-12">
-                                <h4>
-                                    About user
-                                </h4>
+                            <div class="card">
+                                <h5 class="card-header">About user</h5>
+                                <div class="card-body">
                                 <table class="table table-striped">
                                     <thead>
                                     <tr>
@@ -60,7 +58,7 @@
                                     <tbody id="tbody-user"></tbody>
                                 </table>
                                 </br>
-                                </br>
+                                </div>
                             </div>
                         </div>
                     </div>
